--- a/main.css
+++ b/main.css
@@ -27,7 +27,7 @@ header nav li a{
     margin: 0 auto;
 }
 
-header .container{
+section .container{
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -36,6 +36,31 @@ header .container{
 .brand-list img{
     height: 24px;
 }
+
 .brand-list li{
     display: inline;
+}
+
+section .container{
+    align-items: flex-start;
+}
+
+section{
+    padding: 24px 0;
+}
+
+section h2{
+    margin-bottom: 16px;
+}
+
+section p{
+    margin-bottom: 8px;
+}
+
+section img{
+    margin-right: 32px;
+}
+
+.store-front{
+    margin-right: 32px;
 }
