--- a/main.css
+++ b/main.css
@@ -140,3 +140,9 @@ form button:hover{
 input:focus, textarea:focus{
     outline-color: #182C61;
 }
+
+footer{
+    background-color: #182C61;
+    color: #ECF0F1;
+    padding: 16px 0;
+}
